--- a/src/main/resources/templates/room-booking-summary.html
+++ b/src/main/resources/templates/room-booking-summary.html
@@ -54,7 +54,7 @@
                                         <th th:text="${checkOut}"> </th>
                                     </tr>
                                 </table>
-<!--                                <button type="submit" class="btn btn-primary"  >Proceed to Payment</button>  -->
+                                <button type="submit" class="btn btn-primary">Pay Now!!</button>
 
                             </form>
                     </div>
