--- a/src/main/resources/templates/room-booking.html
+++ b/src/main/resources/templates/room-booking.html
@@ -60,24 +60,24 @@
                                 <label>Select Room Type:</label>
                                 <div class="room-container">
                                     <div class="col-md-4">
-                                        <input type="radio" id="normalRoom" name="roomType" value="normal" data-price="100" required>
+                                        <input type="radio" id="normalRoom" name="roomType" value="normal" data-price="1000" required>
                                         <label for="normalRoom">
                                             <h3>Normal Room</h3><img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/77329713704049.5627727f54be5.jpg" alt="Normal Room" width="150">
-                                            <p>Price: ₹100 per hour</p>
+                                            <p>Price: ₹1000 per hour</p>
                                         </label>
                                     </div>
                                     <div class="col-md-4">
-                                        <input type="radio" id="deluxeRoom" name="roomType" value="deluxe" data-price="200">
+                                        <input type="radio" id="deluxeRoom" name="roomType" value="deluxe" data-price="2000">
                                         <label for="deluxeRoom">
                                             <h3>Deluxe Room</h3><img src="https://www.grandlordhotel.com/medias/room/big/78/deluxe02.jpg" alt="Deluxe Room" width="150">
-                                            <p>Price: ₹200 per hour</p>
+                                            <p>Price: ₹2000 per hour</p>
                                         </label>
                                     </div>
                                     <div class="col-md-4">
-                                        <input type="radio" id="luxuriousRoom" name="roomType" value="luxurious" data-price="300">
+                                        <input type="radio" id="luxuriousRoom" name="roomType" value="luxurious" data-price="3000">
                                         <label for="luxuriousRoom">
                                             <h3>Luxurious Room</h3><img src="https://www.jetsetter.com//uploads/sites/7/2018/04/mcdO57rG-1380x1035.jpeg" alt="Luxurious Room" width="150">
-                                            <p>Price: ₹300 per hour</p>
+                                            <p>Price: ₹3000 per hour</p>
                                         </label>
                                     </div>
                                 </div>
@@ -94,7 +94,7 @@
                                 <label for="checkOut">Check-out Date:</label>
                                 <input type="date" th:attr="min=${minDate}" id="checkOut" name="checkOut" class="form-control" required>
                             </div>
-                            <button type="submit" class="btn btn-primary">Proceed to Payment</button>
+                            <button type="submit" class="btn btn-primary">Book Now!!</button>
                         </form>
                     </div>
                 </div>
