--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -36,16 +36,17 @@
                                 <!-- Profile Card -->
                                 <div class="card profile-card">
                                     <div class="card-header">
+                                        <button class="btn btn-primary float-right">Edit</button>
                                         <h2 class="text-center">User Profile</h2>
                                     </div>
                                     <div class="card-body">
                                         <div class="form-group">
                                             <label for="name">Name:</label>
-                                       <!--     <input type="text" class="form-control" id="name" th:value="${user.name}" readonly>  -->
+                                         <input type="text" class="form-control" id="name" th:value="${user.name}" readonly>
                                         </div>
                                         <div class="form-group">
                                             <label for="email">Email:</label>
-                                      <!--      <input type="email" class="form-control" id="email" th:value="${user.email}" readonly>  -->
+                                    <input type="email" class="form-control" id="email" th:value="${user.email}" readonly>
                                         </div>
 
                                     </div>
