--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -7,51 +7,63 @@
                 <div th:classappend="${servletPath.startsWith('/home') ? 'active-nav':''}" class="nav-option">
                     <img src="https://cdn-icons-png.flaticon.com/128/9055/9055096.png"
                         class="nav-img" alt="dashboard">
-                    <h3> <a th:href="home" style="text-decoration:none">Dashboard</a> </h3>
+                    <h3> <a href="home" style="text-decoration:none">Dashboard</a> </h3>
                 </div>
 
                 <div th:if="${!isAdmin}" th:classappend="${servletPath.startsWith('/room-booking') ? 'active-nav':''}" class="nav-option">
                     <img src="https://cdn-icons-png.flaticon.com/128/7481/7481036.png" class="nav-img"
                         alt="articles">
                   <!--  <h3><a href="room_booking.html" style="text-decoration:none">Room</a></h3>  -->
-                    <h3><a th:href="room-booking" style="text-decoration:none">Room</a></h3>
+                    <h3><a href="room-booking" style="text-decoration:none">Room</a></h3>
                 </div>
 
                 <div th:if="${!isAdmin}" th:classappend="${servletPath.startsWith('/canteen') ? 'active-nav':''}" class="nav-option ">
                     <img src="https://cdn-icons-png.flaticon.com/128/737/737967.png" class="nav-img"
                         alt="institution">
-                    <h3><a th:href="canteen" style="text-decoration:none">Canteen</a></h3>
+                    <h3><a href="canteen" style="text-decoration:none">Canteen</a></h3>
                 </div>
 
                 <div th:if="${!isAdmin}" th:classappend="${servletPath.startsWith('/feedback') ? 'active-nav':''}" class="nav-option ">
                     <img src="https://cdn-icons-png.flaticon.com/128/2931/2931308.png" class="nav-img"
                          alt="report">
-                    <h3><a th:href="feedback" style="text-decoration:none">Feedback</a></h3>
+                    <h3><a href="feedback" style="text-decoration:none">Feedback</a></h3>
                 </div>
 
                 <div th:if="${!isAdmin}" th:classappend="${servletPath.startsWith('/profile') ? 'active-nav':''}" class="nav-option ">
                     <img src="https://img.icons8.com/fluency/2x/test-account.png" class="nav-img"
                         alt="blog">
-                    <h3><a th:href="profile" style="text-decoration:none">Profile</a></h3>
+                    <h3><a href="profile" style="text-decoration:none">Profile</a></h3>
                 </div>
 
                 <div th:if="${!isAdmin}" th:classappend="${servletPath.startsWith('/rating') ? 'active-nav':''}" class="nav-option ">
                     <img src="https://cdn-icons-png.flaticon.com/128/9732/9732828.png" class="nav-img"
                          alt="report">
-                    <h3><a th:href="rating" style="text-decoration:none">Rating</a></h3>
+                    <h3><a href="rating" style="text-decoration:none">Rating</a></h3>
                 </div>
 
-                <div th:if="${isAdmin}" th:classappend="${servletPath.startsWith('/admin') ? 'active-nav':''}" class="nav-option">
+                <div th:if="${isAdmin}" th:classappend="${servletPath.startsWith('/admin-bookings') ? 'active-nav':''}" class="nav-option">
                     <img src="https://cdn-icons-png.flaticon.com/128/9977/9977388.png" class="nav-img"
                          alt="admin">
-                    <h3><a th:href="admin" style="text-decoration:none">Admin</a></h3>
+                    <h3><a href="admin-bookings" style="text-decoration:none">Bookings</a></h3>
                 </div>
+
+                <div th:if="${isAdmin}" th:classappend="${servletPath.startsWith('/admin-room') ? 'active-nav':''}" class="nav-option">
+                    <img src="https://cdn-icons-png.flaticon.com/128/9977/9977388.png" class="nav-img"
+                         alt="admin">
+                    <h3><a href="admin-room" style="text-decoration:none">Room config</a></h3>
+                </div>
+
+                <div th:if="${isAdmin}" th:classappend="${servletPath.startsWith('/admin-canteen') ? 'active-nav':''}" class="nav-option">
+                    <img src="https://cdn-icons-png.flaticon.com/128/9977/9977388.png" class="nav-img"
+                         alt="admin">
+                    <h3><a href="admin-canteen" style="text-decoration:none">Canteen config</a></h3>
+                </div>
+
 
                 <div th:classappend="${servletPath.startsWith('/dashboard') ? 'active-nav':''}" class="nav-option">
                     <img src="https://cdn-icons-png.flaticon.com/128/10313/10313098.png" class="nav-img"
                         alt="logout">
-                    <h3><a th:href="logout" style="text-decoration:none">Logout</a></h3>
-
+                    <h3><a href="logout" style="text-decoration:none">Logout</a></h3>
                 </div>
 
             </div>
